test/files/neg/sabin2.check
sabin2.scala:22: error: method set cannot be accessed in Test.Base#Inner
 because its instance type (Test.Base#T)Unit contains a malformed type: Test.Base#T
   a.set(b.get()) // Error
     ^
one error found
